# Sg.ProcessWatcher

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmake_debug.cmake  icon.rc  main.cpp
